@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tg-sources-3.2.9-r2 (11 Mar 2012)
+
+  11 Mar 2012; <thomasg@gentoo.org> +tg-sources-3.2.9-r2.ebuild:
+  bump to r2 with new grsec test release
+
 *tg-sources-3.2.9-r1 (06 Mar 2012)
 
   06 Mar 2012; <thomasg@gentoo.org> +tg-sources-3.2.9-r1.ebuild:
